# Kryos_V-1.0

./: .gitignore  CLAUDE.md  CORRECOES_SPRINT1.txt  DIRETRIZ_REFATORACAO_MQTT.md  README.md  cronograma.md  docker-compose.yml  pom.xml
backup/: CMakeLists.txt  README.md
backup/include/: IModbusCommunicator.hpp
backup/kryos/: ARCHITECTURE.md  GLOSSARY.md  GOVERNANCE.md  README.md  ROADMAP.md  VISION.md
backup/kryos-v2/: %t%  -  .gitignore  README.md  _check_db_tmp.py  package.json  run-dev.bat  test_endpoint.py  test_server_map.xml  tmp_find_guess.py  tmp_find_model_file.py  tmp_find_server_modbus.py  tmp_show_scan_ui.py
backup/kryos-v2/backend/: package.json  requirements.txt  start-backend.bat  tmp_test.txt
backup/kryos-v2/frontend/: index.html  package-lock.json  package.json  vite.config.js
backup/kryos-v2/upload/: 1_BACKEND_DB_MODELS.txt  3_BACKEND_API_ROUTES.txt  4_BACKEND_DATA_PROCESSING.txt  5_BACKEND_SERVICES_TASKS.txt  6_BACKEND_UTILS_HELPERS_PART_10_OF_10.txt  6_BACKEND_UTILS_HELPERS_PART_1_OF_10.txt  6_BACKEND_UTILS_HELPERS_PART_2_OF_10.txt  6_BACKEND_UTILS_HELPERS_PART_4_OF_10.txt  6_BACKEND_UTILS_HELPERS_PART_5_OF_10.txt  6_BACKEND_UTILS_HELPERS_PART_6_OF_10.txt  6_BACKEND_UTILS_HELPERS_PART_7_OF_10.txt  6_BACKEND_UTILS_HELPERS_PART_8_OF_10.txt  6_BACKEND_UTILS_HELPERS_PART_9_OF_10.txt  7_BACKEND_ERRORS_LOGS.txt  8_FRONTEND_UI.txt
backup/kryos/WebApp/: copier.bat  index.jsp  layedprev.jsp
backup/kryos/docs/: architecture.md  data-flow.md  data-flow.mmd  er-diagram.md  (+3 more)
backup/src/: DataAcquisition.cpp
backup/tests/: test_engine.cpp
(+455 files in other folders)
